<?xml version="1.0"?>
<?model-sheet href="package.xsl" type="text/xsl"?>
<package format="3">
  <name>swarm_control</name>
  <version>0.0.1</version>
  <description>ROS 2 Python node to control a swarm of PX4 UAVs via Micro XRCE-DDS</description>
  <maintainer email="developer@todo.todo">developer</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
